| Bug #5247 | Query with a correlated sub-query and using view returns a wrong result | ||
|---|---|---|---|
| Submitted: | 27 Aug 2004 10:34 | Modified: | 6 Sep 2004 13:52 |
| Reporter: | Igor Babaev | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) |
| Version: | 5.0.2 | OS: | Any (all) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[27 Aug 2004 10:34]
Igor Babaev
[1 Sep 2004 22:30]
Oleksandr Byelkin
ChangeSet 1.1744 04/09/01 23:27:40 bell@sanja.is.com.ua +3 -0 fixed staistic of subquery if outer field resolved in merged view (BUG#5247)
[6 Sep 2004 13:52]
Oleksandr Byelkin
Thank you for bugreport! Bug is fixed, patch is pushed intou nour source repositoy.
