fixed staistic of subquery if outer field resolved in merged view (BUG#5247)